feat: add content viewer modal and update translations (#477)
* feat: add content viewer modal and update translations

- Introduced a new ContentViewer modal for displaying parsed content.
- Removed the obsolete OcrContentViewer modal.
- Updated translation files for multiple languages to include new keys for "Click to view parsed content", "Content", "File Content", "Link Content", and "No content available".
- Registered the new ContentViewer modal in the modals index.

* feat: enhance title generation for MessageAttachment based on filename and URL length

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "انقر هنا لإعداد",
   "Click to view full text": "انقر لعرض النص الكامل",
   "Click to view license details and quota usage": "اضغط لعرض تفاصيل الترخيص واستخدام الحصة",
+  "Click to view parsed content": "انقر لعرض المحتوى المحلل",
   "close": "إغلاق",
   "Close": "إغلاق",
   "Code Search": "بحث في الكود",
@@ -147,6 +148,7 @@
   "Connection failed!": "فشل الاتصال!",
   "Connection successful!": "تم الاتصال بنجاح!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "فشل الاتصال بـ {{aiProvider}}. يحدث هذا عادةً بسبب تكوين غير صحيح أو مشكلات في حساب {{aiProvider}}. يرجى <buttonOpenSettings>التحقق من الإعدادات</buttonOpenSettings> والتحقق من حالة حسابك في {{aiProvider}}، أو شراء <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> لفتح جميع النماذج المتقدمة على الفور دون أي تكوين.",
+  "Content": "المحتوى",
   "Context": "السياق",
   "Context messages": "رسائل السياق",
   "Context Window": "نافذة السياق",
@@ -285,6 +287,7 @@
   "File": "ملف",
   "File Chunks": "أجزاء الملف",
   "File Chunks Preview": "معاينة أجزاء الملف",
+  "File Content": "محتوى الملف",
   "File Processing Error": "خطأ في معالجة الملف",
   "File saved to {{uri}}": "حُفظ الملف إلى {{uri}}",
   "File Search": "بحث الملفات",
@@ -361,6 +364,7 @@
   "License Plan Overview": "نظرة عامة على خطة الترخيص",
   "lifetime license": "ترخيص مدى الحياة",
   "Light Mode": "وضع الضوء",
+  "Link Content": "محتوى الرابط",
   "List Files": "قائمة الملفات",
   "Load More Chunks": "تحميل المزيد من الأجزاء",
   "Loading chunks...": "جارٍ تحميل الأجزاء...",
@@ -437,6 +441,7 @@
   "Nickname": "الاسم المستعار",
   "No": "لا",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "لا توجد أجزاء متاحة. حاول تحويل الملف إلى تنسيق نصي قبل إضافته إلى قاعدة المعرفة.",
+  "No content available": "لا يتوفر محتوى",
   "No documents yet": "لا توجد مستندات بعد",
   "No eligible models available": "لا توجد نماذج مؤهلة متاحة",
   "No expiration": "بدون انتهاء",
