--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "Hier klicken, um einzurichten",
   "Click to view full text": "Vollständigen Text anzeigen",
   "Click to view license details and quota usage": "Klicken Sie hier, um Lizenzdetails und Quotennutzung anzusehen",
+  "Click to view parsed content": "Klicken, um den geparsten Inhalt anzuzeigen",
   "close": "Schließen",
   "Close": "Schließen",
   "Code Search": "Code-Suche",
@@ -147,6 +148,7 @@
   "Connection failed!": "Verbindung fehlgeschlagen!",
   "Connection successful!": "Verbindung erfolgreich!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Verbindung zu {{aiProvider}} fehlgeschlagen. Dies tritt in der Regel aufgrund einer falschen Konfiguration oder {{aiProvider}}-Kontoprobleme auf. Bitte <buttonOpenSettings>überprüfen Sie Ihre Einstellungen</buttonOpenSettings> und überprüfen Sie den Status Ihres {{aiProvider}}-Kontos oder kaufen Sie eine <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>, um sofort alle erweiterten Modelle ohne Konfiguration freizuschalten.",
+  "Content": "Inhalt",
   "Context": "Kontext",
   "Context messages": "Kontextnachrichtenanzahl",
   "Context Window": "Kontextfenster",
@@ -285,6 +287,7 @@
   "File": "Datei",
   "File Chunks": "Dateiblöcke",
   "File Chunks Preview": "Dateiblöcke-Vorschau",
+  "File Content": "Dateiinhalt",
   "File Processing Error": "Dateiverarbeitungsfehler",
   "File saved to {{uri}}": "Datei gespeichert unter {{uri}}",
   "File Search": "Dateisuche",
@@ -361,6 +364,7 @@
   "License Plan Overview": "Übersicht der Lizenzpakete",
   "lifetime license": "Lebenslange Lizenz",
   "Light Mode": "Heller Modus",
+  "Link Content": "Link-Inhalt",
   "List Files": "Dateien auflisten",
   "Load More Chunks": "Mehr Blöcke laden",
   "Loading chunks...": "Lade Chunks...",
@@ -437,6 +441,7 @@
   "Nickname": "Benutzername",
   "No": "Nein",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "Keine Textblöcke verfügbar. Versuchen Sie, die Datei in ein Textformat zu konvertieren, bevor Sie sie zur Wissensdatenbank hinzufügen.",
+  "No content available": "Keine Inhalte verfügbar",
   "No documents yet": "Noch keine Dokumente",
   "No eligible models available": "Keine geeigneten Modelle verfügbar",
   "No expiration": "Kein Ablauf",
