--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -102,6 +102,7 @@
   "Clear Conversation List": "Clear Conversation List",
   "Click here to set up": "Click here to set up",
   "Click to view full text": "Click to view full text",
+  "Click to view parsed content": "Click to view parsed content",
   "close": "close",
   "Close": "close",
   "Code Search": "Code Search",
@@ -118,6 +119,7 @@
   "Connection failed!": "Connection failed!",
   "Connection successful!": "Connection successful!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.",
+  "Content": "Content",
   "Context": "Context",
   "Context messages": "Context messages",
   "Context Window": "Context Window",
@@ -237,6 +239,7 @@
   "File": "File",
   "File Chunks": "File Chunks",
   "File Chunks Preview": "File Chunks Preview",
+  "File Content": "File Content",
   "File Processing Error": "File Processing Error",
   "File saved to {{uri}}": "File saved to {{uri}}",
   "File Search": "File Search",
@@ -303,6 +306,7 @@
   "License not found, please check your license key": "License not found, please check your license key",
   "License Plan Overview": "License Plan Overview",
   "Light Mode": "Light Mode",
+  "Link Content": "Link Content",
   "List Files": "List Files",
   "Load More Chunks": "Load More Chunks",
   "Loading chunks...": "Loading chunks...",
@@ -372,6 +376,7 @@
   "New Thread": "New Thread",
   "Nickname": "Nickname",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "No chunks available. Try converting the file to a text format before adding it to the knowledge base.",
+  "No content available": "No content available",
   "No documents yet": "No documents yet",
   "No eligible models available": "No eligible models available",
   "No expiration": "No expiration",
