--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "Haz clic aquí para configurar",
   "Click to view full text": "Haga clic para ver texto completo",
   "Click to view license details and quota usage": "Haga clic para ver los detalles de la licencia y el uso de la cuota",
+  "Click to view parsed content": "Clic para ver contenido analizado",
   "close": "Cerrar",
   "Close": "Cerrar",
   "Code Search": "Búsqueda de Código",
@@ -147,6 +148,7 @@
   "Connection failed!": "¡Conexión fallida!",
   "Connection successful!": "¡Conexión exitosa!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "La conexión a {{aiProvider}} falló. Esto suele ocurrir debido a una configuración incorrecta o problemas de cuenta de {{aiProvider}}. Por favor, <buttonOpenSettings>verifique sus ajustes</buttonOpenSettings> y verifique el estado de su cuenta de {{aiProvider}}, o compre una <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> para desbloquear todos los modelos avanzados al instante sin necesidad de configuración.",
+  "Content": "Contenido",
   "Context": "Contexto",
   "Context messages": "Mensajes en contexto",
   "Context Window": "Ventana de contexto",
@@ -285,6 +287,7 @@
   "File": "Archivo",
   "File Chunks": "Fragmentos de archivo",
   "File Chunks Preview": "Vista previa de fragmentos de archivo",
+  "File Content": "Contenido del archivo",
   "File Processing Error": "Error de procesamiento de archivo",
   "File saved to {{uri}}": "Archivo guardado en {{uri}}",
   "File Search": "Búsqueda de Archivos",
@@ -361,6 +364,7 @@
   "License Plan Overview": "Resumen del plan de licencia",
   "lifetime license": "licencia de por vida",
   "Light Mode": "Modo claro",
+  "Link Content": "Contenido del enlace",
   "List Files": "Listar Archivos",
   "Load More Chunks": "Cargar más fragmentos",
   "Loading chunks...": "Cargando fragmentos...",
@@ -437,6 +441,7 @@
   "Nickname": "Apodo",
   "No": "No",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "No hay fragmentos disponibles. Intenta convertir el archivo a un formato de texto antes de añadirlo a la base de conocimientos.",
+  "No content available": "No hay contenido disponible",
   "No documents yet": "No hay documentos aún",
   "No eligible models available": "No hay modelos elegibles disponibles",
   "No expiration": "Sin vencimiento",
