--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "Cliquez ici pour configurer",
   "Click to view full text": "Cliquer pour voir le texte complet",
   "Click to view license details and quota usage": "Cliquez pour consulter les détails de la licence et l'utilisation du quota",
+  "Click to view parsed content": "Cliquer pour voir le contenu analysé",
   "close": "Fermer",
   "Close": "Fermer",
   "Code Search": "Recherche de code",
@@ -147,6 +148,7 @@
   "Connection failed!": "Échec de la connexion !",
   "Connection successful!": "Connexion réussie !",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "La connexion à {{aiProvider}} a échoué. Cela se produit généralement en raison d'une configuration incorrecte ou de problèmes de compte {{aiProvider}}. Veuillez <buttonOpenSettings>vérifier vos paramètres</buttonOpenSettings> et vérifier le statut de votre compte {{aiProvider}}, ou achetez une <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> pour débloquer instantanément tous les modèles avancés sans aucune configuration.",
+  "Content": "Contenu",
   "Context": "Contexte",
   "Context messages": "Messages de contexte",
   "Context Window": "Fenêtre de contexte",
@@ -285,6 +287,7 @@
   "File": "Fichier",
   "File Chunks": "Morceaux de fichier",
   "File Chunks Preview": "Aperçu des morceaux de fichier",
+  "File Content": "Contenu du fichier",
   "File Processing Error": "Erreur de traitement de fichier",
   "File saved to {{uri}}": "Fichier enregistré dans {{uri}}",
   "File Search": "Recherche de fichiers",
@@ -361,6 +364,7 @@
   "License Plan Overview": "Aperçu des Offres de Licence",
   "lifetime license": "licence à vie",
   "Light Mode": "Mode Clair",
+  "Link Content": "Contenu du lien",
   "List Files": "Lister les fichiers",
   "Load More Chunks": "Charger plus de blocs",
   "Loading chunks...": "Chargement des fragments...",
@@ -437,6 +441,7 @@
   "Nickname": "Surnom",
   "No": "Non",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "Aucun segment disponible. Essayez de convertir le fichier au format texte avant de l'ajouter à la base de connaissances.",
+  "No content available": "Aucun contenu disponible",
   "No documents yet": "Aucun document pour l'instant",
   "No eligible models available": "Aucun modèle éligible disponible",
   "No expiration": "Sans expiration",
