--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -128,6 +128,7 @@
   "Click here to set up": "Fai clic qui per configurare",
   "Click to view full text": "Clicca per visualizzare il testo completo",
   "Click to view license details and quota usage": "Clicca per visualizzare i dettagli della licenza e l'utilizzo della quota",
+  "Click to view parsed content": "Clicca per visualizzare il contenuto analizzato",
   "close": "Chiudi",
   "Close": "Chiudi",
   "Code Search": "Ricerca codice",
@@ -146,6 +147,7 @@
   "Connection failed!": "Connessione fallita!",
   "Connection successful!": "Connessione riuscita!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Connessione a {{aiProvider}} fallita. Questo si verifica tipicamente a causa di una configurazione errata o problemi con l'account {{aiProvider}}. Per favore, <buttonOpenSettings>controlla le tue impostazioni</buttonOpenSettings> e verifica lo stato del tuo account {{aiProvider}}, o acquista una <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> per sbloccare tutti i modelli avanzati istantaneamente senza alcuna configurazione.",
+  "Content": "Contenuto",
   "Context": "Contesto",
   "Context messages": "Messaggi di contesto",
   "Context Window": "Finestra di Contesto",
@@ -284,6 +286,7 @@
   "File": "File",
   "File Chunks": "Blocchi di file",
   "File Chunks Preview": "Anteprima blocchi file",
+  "File Content": "Contenuto del file",
   "File Processing Error": "Errore nell'elaborazione del file",
   "File saved to {{uri}}": "File salvato in {{uri}}",
   "File Search": "Ricerca file",
@@ -360,6 +363,7 @@
   "License Plan Overview": "Panoramica del piano di licenza",
   "lifetime license": "licenza a vita",
   "Light Mode": "Modalità chiara",
+  "Link Content": "Contenuto del collegamento",
   "List Files": "Elenca File",
   "Load More Chunks": "Carica altri blocchi",
   "Loading chunks...": "Caricamento dei blocchi...",
@@ -436,6 +440,7 @@
   "Nickname": "Soprannome",
   "No": "No",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "Nessun chunk disponibile. Prova a convertire il file in formato testo prima di aggiungerlo alla base di conoscenza.",
+  "No content available": "Nessun contenuto disponibile",
   "No documents yet": "Nessun documento ancora",
   "No eligible models available": "Nessun modello idoneo disponibile",
   "No expiration": "Nessuna scadenza",
