--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "セットアップするにはここをクリック",
   "Click to view full text": "クリックして全文を表示",
   "Click to view license details and quota usage": "ライセンスの詳細とクオータの使用状況を確認するには、こちらをクリックしてください",
+  "Click to view parsed content": "クリックして解析済みコンテンツを表示",
   "close": "閉じる",
   "Close": "閉じる",
   "Code Search": "コード検索",
@@ -147,6 +148,7 @@
   "Connection failed!": "接続失敗！",
   "Connection successful!": "接続成功！",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "{{aiProvider}}への接続に失敗しました。これは通常、設定の誤りや{{aiProvider}}アカウントの問題によるものです。設定を確認して{{aiProvider}}アカウントのステータスを確認するか、<LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>を購入して、すべての高度なモデルを即座に設定なしでロック解除してください。",
+  "Content": "コンテンツ",
   "Context": "コンテキスト",
   "Context messages": "コンテキストメッセージ数",
   "Context Window": "コンテキストウィンドウ",
@@ -285,6 +287,7 @@
   "File": "ファイル",
   "File Chunks": "ファイルチャンク",
   "File Chunks Preview": "ファイルチャンクプレビュー",
+  "File Content": "ファイルコンテンツ",
   "File Processing Error": "ファイル処理エラー",
   "File saved to {{uri}}": "ファイルが{{uri}}に保存されました",
   "File Search": "ファイル検索",
@@ -361,6 +364,7 @@
   "License Plan Overview": "ライセンスプラン概要",
   "lifetime license": "ライフタイムライセンス",
   "Light Mode": "ライトモード",
+  "Link Content": "リンクコンテンツ",
   "List Files": "ファイル一覧",
   "Load More Chunks": "さらにチャンクを読み込む",
   "Loading chunks...": "チャンクを読み込み中...",
@@ -437,6 +441,7 @@
   "Nickname": "ニックネーム",
   "No": "いいえ",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "チャンクがありません。ナレッジベースに追加する前に、ファイルをテキスト形式に変換してみてください。",
+  "No content available": "コンテンツなし",
   "No documents yet": "まだドキュメントがありません",
   "No eligible models available": "利用可能なモデルがありません",
   "No expiration": "期限なし",
