--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "여기를 클릭하여 설정하세요",
   "Click to view full text": "클릭하여 전체 텍스트 보기",
   "Click to view license details and quota usage": "라이선스 세부 정보 및 할당량 사용 현황을 보려면 클릭하세요",
+  "Click to view parsed content": "클릭해서 파싱된 내용 보기",
   "close": "닫기",
   "Close": "닫기",
   "Code Search": "코드 검색",
@@ -147,6 +148,7 @@
   "Connection failed!": "연결 실패!",
   "Connection successful!": "연결 성공!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "{{aiProvider}}에 연결하지 못했습니다. 일반적으로 잘못된 구성 또는 {{aiProvider}} 계정 문제로 발생합니다. <buttonOpenSettings>설정을 확인</buttonOpenSettings>하고 {{aiProvider}} 계정 상태를 확인하거나 <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>를 구매하여 모든 고급 모델을 즉시 구성 없이 잠금 해제하세요.",
+  "Content": "콘텐츠",
   "Context": "컨텍스트",
   "Context messages": "컨텍스트 메시지 수",
   "Context Window": "컨텍스트 창",
@@ -285,6 +287,7 @@
   "File": "파일",
   "File Chunks": "파일 청크",
   "File Chunks Preview": "파일 청크 미리보기",
+  "File Content": "파일 내용",
   "File Processing Error": "파일 처리 오류",
   "File saved to {{uri}}": "파일이 {{uri}}에 저장되었습니다.",
   "File Search": "파일 검색",
@@ -361,6 +364,7 @@
   "License Plan Overview": "라이선스 플랜 개요",
   "lifetime license": "평생 라이선스",
   "Light Mode": "라이트 모드",
+  "Link Content": "링크 콘텐츠",
   "List Files": "파일 목록",
   "Load More Chunks": "청크 더 불러오기",
   "Loading chunks...": "청크 로딩 중...",
@@ -437,6 +441,7 @@
   "Nickname": "별명",
   "No": "아니요",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "사용 가능한 청크가 없습니다. 지식 기반에 추가하기 전에 파일을 텍스트 형식으로 변환해 보세요.",
+  "No content available": "사용 가능한 콘텐츠 없음",
   "No documents yet": "아직 문서 없음",
   "No eligible models available": "사용 가능한 적격 모델이 없습니다.",
   "No expiration": "만료 없음",
