--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "Klikk her for å sette opp",
   "Click to view full text": "Klikk for å vise full tekst",
   "Click to view license details and quota usage": "Klikk for å se lisensdetaljer og kvotebruk",
+  "Click to view parsed content": "Klikk for å vise tolket innhold",
   "close": "Lukk",
   "Close": "Lukk",
   "Code Search": "Kodesøk",
@@ -147,6 +148,7 @@
   "Connection failed!": "Tilkobling mislyktes!",
   "Connection successful!": "Tilkobling vellykket!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Tilkobling til {{aiProvider}} mislyktes. Dette skjer vanligvis på grunn av feil konfigurasjon eller {{aiProvider}}-konto problemer. Vennligst <buttonOpenSettings>sørg for at innstillingene dine er riktige</buttonOpenSettings> og bekreft statusen for {{aiProvider}}-kontoen din, eller kjøp en <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> for å låse opp alle avanserte modeller umiddelbart uten noen konfigurasjon.",
+  "Content": "Innhold",
   "Context": "Kontekst",
   "Context messages": "Kontekstmeldinger",
   "Context Window": "Kontekstvindu",
@@ -285,6 +287,7 @@
   "File": "Fil",
   "File Chunks": "Filbiter",
   "File Chunks Preview": "Forhåndsvisning av filbiter",
+  "File Content": "Filinnhold",
   "File Processing Error": "Filbehandlingsfeil",
   "File saved to {{uri}}": "Fil lagret til {{uri}}",
   "File Search": "Filsøk",
@@ -361,6 +364,7 @@
   "License Plan Overview": "Lisensoversikt",
   "lifetime license": "livstidslisens",
   "Light Mode": "Lys modus",
+  "Link Content": "Lenkeinnhold",
   "List Files": "Vis filer",
   "Load More Chunks": "Last inn flere biter",
   "Loading chunks...": "Laster inn biter...",
@@ -437,6 +441,7 @@
   "Nickname": "Visningsnavn",
   "No": "Nei",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "Ingen biter tilgjengelig. Prøv å konvertere filen til et tekstformat før du legger den til kunnskapsbasen.",
+  "No content available": "Ingen tilgjengelig innhold",
   "No documents yet": "Ingen dokumenter ennå",
   "No eligible models available": "Ingen kvalifiserte modeller tilgjengelige",
   "No expiration": "Ingen utløpsdato",
