--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "Clique aqui para configurar",
   "Click to view full text": "Clique para ver o texto completo",
   "Click to view license details and quota usage": "Clique para ver os detalhes da licença e uso da quota",
+  "Click to view parsed content": "Clique para ver o conteúdo analisado",
   "close": "Fechar",
   "Close": "Fechar",
   "Code Search": "Pesquisa de Código",
@@ -147,6 +148,7 @@
   "Connection failed!": "Conexão falhou!",
   "Connection successful!": "Conexão bem-sucedida!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "A conexão com {{aiProvider}} falhou. Isso geralmente ocorre devido a configurações incorretas ou problemas de conta {{aiProvider}}. Por favor, <buttonOpenSettings>verifique suas configurações</buttonOpenSettings> e verifique o status de sua conta {{aiProvider}}, ou compre uma <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> para desbloquear todos os modelos avançados instantaneamente sem nenhuma configuração.",
+  "Content": "Conteúdo",
   "Context": "Contexto",
   "Context messages": "Mensagens de contexto",
   "Context Window": "Janela de Contexto",
@@ -284,6 +286,7 @@
   "File": "Ficheiro",
   "File Chunks": "Fragmentos de Ficheiro",
   "File Chunks Preview": "Pré-visualização de Fragmentos de Ficheiro",
+  "File Content": "Conteúdo do Ficheiro",
   "File Processing Error": "Erro no Processamento do Ficheiro",
   "File saved to {{uri}}": "Ficheiro guardado em {{uri}}",
   "File Search": "Pesquisa de Ficheiros",
@@ -360,6 +363,7 @@
   "License Plan Overview": "Visão Geral do Plano de Licença",
   "lifetime license": "licença vitalícia",
   "Light Mode": "Modo Claro",
+  "Link Content": "Conteúdo do Link",
   "List Files": "Listar Ficheiros",
   "Load More Chunks": "Carregar Mais Fragmentos",
   "Loading chunks...": "A carregar blocos...",
@@ -436,6 +440,7 @@
   "Nickname": "Apelido",
   "No": "Não",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "Nenhum fragmento disponível. Tente converter o ficheiro para um formato de texto antes de o adicionar à base de conhecimento.",
+  "No content available": "Nenhum conteúdo disponível",
   "No documents yet": "Nenhum documento ainda",
   "No eligible models available": "Nenhum modelo elegível disponível",
   "No expiration": "Sem validade",
