--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "Нажмите здесь, чтобы настроить",
   "Click to view full text": "Нажмите, чтобы просмотреть полный текст",
   "Click to view license details and quota usage": "Нажмите, чтобы просмотреть детали лицензии и использование квоты",
+  "Click to view parsed content": "Нажмите, чтобы просмотреть разобранное содержимое",
   "close": "Закрыть",
   "Close": "Закрыть",
   "Code Search": "Поиск кода",
@@ -147,6 +148,7 @@
   "Connection failed!": "Ошибка соединения!",
   "Connection successful!": "Соединение успешно!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Соединение с {{aiProvider}} не удалось. Обычно это происходит из-за неправильной конфигурации или проблем с аккаунтом {{aiProvider}}. Пожалуйста, <buttonOpenSettings>проверьте ваши настройки</buttonOpenSettings> и проверьте статус вашего аккаунта {{aiProvider}}, или приобретите <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>, чтобы мгновенно разблокировать все расширенные модели без какой-либо конфигурации.",
+  "Content": "Содержимое",
   "Context": "Контекст",
   "Context messages": "Контекстные сообщения",
   "Context Window": "Окно контекста",
@@ -285,6 +287,7 @@
   "File": "Файл",
   "File Chunks": "Фрагменты файла",
   "File Chunks Preview": "Предварительный просмотр чанков файла",
+  "File Content": "Содержимое файла",
   "File Processing Error": "Ошибка обработки файла",
   "File saved to {{uri}}": "Файл сохранен в {{uri}}",
   "File Search": "Поиск файлов",
@@ -361,6 +364,7 @@
   "License Plan Overview": "Обзор Лицензионных Планов",
   "lifetime license": "пожизненная лицензия",
   "Light Mode": "Светлый режим",
+  "Link Content": "Содержимое ссылки",
   "List Files": "Список файлов",
   "Load More Chunks": "Загрузить больше фрагментов",
   "Loading chunks...": "Загрузка фрагментов...",
@@ -437,6 +441,7 @@
   "Nickname": "Псевдоним",
   "No": "Нет",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "Нет доступных фрагментов. Попробуйте преобразовать файл в текстовый формат, прежде чем добавлять его в базу знаний.",
+  "No content available": "Нет содержимого",
   "No documents yet": "Пока нет документов",
   "No eligible models available": "Подходящие модели отсутствуют",
   "No expiration": "Без срока действия",
