--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "Klicka här för att ställa in",
   "Click to view full text": "Klicka för att visa fullständig text",
   "Click to view license details and quota usage": "Klicka för att se licensdetaljer och kvotanvändning",
+  "Click to view parsed content": "Klicka för att visa analyserat innehåll",
   "close": "Stäng",
   "Close": "Stäng",
   "Code Search": "Kodsökning",
@@ -147,6 +148,7 @@
   "Connection failed!": "Anslutning misslyckades!",
   "Connection successful!": "Anslutning lyckades!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Anslutningen till {{aiProvider}} misslyckades. Detta inträffar vanligtvis på grund av felaktig konfiguration eller {{aiProvider}}-kontoproblem. Vänligen <buttonOpenSettings>kontrollera dina inställningar</buttonOpenSettings> och verifiera ditt {{aiProvider}}-kontostatus, eller köp en <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> för att låsa upp alla avancerade modeller omedelbart utan någon konfiguration.",
+  "Content": "Innehåll",
   "Context": "Kontext",
   "Context messages": "Antal kontextmeddelanden",
   "Context Window": "Kontextfönster",
@@ -285,6 +287,7 @@
   "File": "Fil",
   "File Chunks": "Filsegment",
   "File Chunks Preview": "Förhandsgranskning av filsegment",
+  "File Content": "Filinnehåll",
   "File Processing Error": "Filbearbetningsfel",
   "File saved to {{uri}}": "Fil sparad till {{uri}}",
   "File Search": "Filsökning",
@@ -361,6 +364,7 @@
   "License Plan Overview": "Översikt över licensplan",
   "lifetime license": "livstidslicens",
   "Light Mode": "Ljust läge",
+  "Link Content": "Länkinnehåll",
   "List Files": "Lista Filer",
   "Load More Chunks": "Ladda fler delar",
   "Loading chunks...": "Laddar segment...",
@@ -437,6 +441,7 @@
   "Nickname": "Visningsnamn",
   "No": "Nej",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "Inga segment tillgängliga. Försök att konvertera filen till ett textformat innan du lägger till den i kunskapsbasen.",
+  "No content available": "Inget innehåll tillgängligt",
   "No documents yet": "Inga dokument ännu",
   "No eligible models available": "Inga behöriga modeller tillgängliga",
   "No expiration": "Inget utgångsdatum",
