--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "点击此处进行设置",
   "Click to view full text": "点击查看全文",
   "Click to view license details and quota usage": "点击查看 license 详情与配额使用情况",
+  "Click to view parsed content": "点击查看解析内容",
   "close": "关闭",
   "Close": "关闭",
   "Code Search": "代码搜索",
@@ -147,6 +148,7 @@
   "Connection failed!": "连接失败！",
   "Connection successful!": "连接成功！",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "连接 {{aiProvider}} 失败。这通常是由于配置错误或 {{aiProvider}} 账户问题。请<buttonOpenSettings>检查您的设置</buttonOpenSettings>并验证您的 {{aiProvider}} 账户状态，或购买<LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>即可立即解锁所有高级模型，无需任何配置。",
+  "Content": "内容",
   "Context": "上下文",
   "Context messages": "上下文消息数",
   "Context Window": "上下文窗口",
@@ -285,6 +287,7 @@
   "File": "文件",
   "File Chunks": "文件分块",
   "File Chunks Preview": "文件分块预览",
+  "File Content": "文件内容",
   "File Processing Error": "文件处理错误",
   "File saved to {{uri}}": "文件已保存到 {{uri}}",
   "File Search": "文件搜索",
@@ -361,6 +364,7 @@
   "License Plan Overview": "License 套餐概览",
   "lifetime license": "终身授权",
   "Light Mode": "浅色模式",
+  "Link Content": "链接内容",
   "List Files": "列出文件",
   "Load More Chunks": "加载更多分块",
   "Loading chunks...": "加载分块中...",
@@ -437,6 +441,7 @@
   "Nickname": "显示名称",
   "No": "否",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "没有可用分块。请尝试将文件转换为文本格式，然后再添加到知识库。",
+  "No content available": "暂无内容",
   "No documents yet": "暂无文档",
   "No eligible models available": "没有可用的合格模型",
   "No expiration": "永不失效",
