--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -129,6 +129,7 @@
   "Click here to set up": "按此設定",
   "Click to view full text": "點擊查看全文",
   "Click to view license details and quota usage": "點擊查看 License 詳情與配額使用情況",
+  "Click to view parsed content": "點擊查看解析內容",
   "close": "關閉",
   "Close": "關閉",
   "Code Search": "程式碼搜尋",
@@ -147,6 +148,7 @@
   "Connection failed!": "連接失敗！",
   "Connection successful!": "連接成功！",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "與 {{aiProvider}} 的連接失敗。這通常是由於配置不正確或 {{aiProvider}} 帳戶問題引起的。請<OpenSettingsButton>檢查您的設置</OpenSettingsButton>並驗證您的 {{aiProvider}} 帳戶狀態，或購買<LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>即可立即解鎖所有高級模型，無需任何配置。",
+  "Content": "內容",
   "Context": "上下文",
   "Context messages": "上下文訊息數",
   "Context Window": "上下文視窗",
@@ -285,6 +287,7 @@
   "File": "檔案",
   "File Chunks": "檔案區塊",
   "File Chunks Preview": "檔案區塊預覽",
+  "File Content": "檔案內容",
   "File Processing Error": "檔案處理錯誤",
   "File saved to {{uri}}": "檔案已儲存至 {{uri}}",
   "File Search": "檔案搜尋",
@@ -361,6 +364,7 @@
   "License Plan Overview": "License 套餐概覽",
   "lifetime license": "終身授權",
   "Light Mode": "淺色模式",
+  "Link Content": "連結內容",
   "List Files": "列出檔案",
   "Load More Chunks": "載入更多區塊",
   "Loading chunks...": "載入區塊中...",
@@ -437,6 +441,7 @@
   "Nickname": "顯示名稱",
   "No": "否",
   "No chunks available. Try converting the file to a text format before adding it to the knowledge base.": "沒有可用的區塊。請嘗試將檔案轉換為文字格式，再將其新增至知識庫。",
+  "No content available": "無內容",
   "No documents yet": "尚未有文件",
   "No eligible models available": "沒有可用的合格模型",
   "No expiration": "無期限",
